overlapping content resolved

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -521,6 +521,10 @@ a{
   text-align:left;
 }
 
+.card-text{
+  margin-top: 30px;
+}
+
 .information li{
   font-size:1.7rem;
   color:var(--black)
